--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/flatpickr/dist/flatpickr.css",
               "src/styles.scss"
             ],
             "scripts": []
