--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
     "@popperjs/core": "^2.11.6",
+    "angularx-flatpickr": "^7.3.0",
     "bootstrap": "^5.2.3",
+    "flatpickr": "^4.6.13",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
